<resources>


    <string name="name_film">Title Film</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="back">Back</string>

    <string name="app_name">Movie Catalog</string>

    <string name="change_language_settings">Change Language Setting</string>
    <string name="set_language">en-US-</string>

    <string name="name">Name Film</string>
    <string name="todo">TODO</string>
    <string name="title_movie">Movie Show</string>
    <string name="movies_popularity">Movies Popularity</string>
    <string name="movies_releasedate">Movies Release Date</string>

    <string name="title_tv">TV Show</string>
    <string name="title_activity_buttom">ButtomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">delete</string>
    <string name="favourit">favourit</string>

<string name="movies_rating">Movie Rating</string>
<string name="btn_favorite">Favourite</string>
<string name="text_desc">Description</string>
<string name="add_favourite">Add Favourite</string>
<string name="title_activity_bottom_navigasi">BottomNavigasi</string>




</resources>
